<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cardoc.asc1.cardoc.CarInfo">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_make_text"
        android:text="@string/make"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_model_text"
        android:text="@string/model"
        android:layout_below="@id/car_make_text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_year_text"
        android:text="@string/year"
        android:layout_below="@id/car_model_text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_mileage_text"
        android:text="@string/mileage"
        android:layout_below="@id/car_year_text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_oil_text"
        android:text="@string/oil"
        android:layout_below="@id/car_mileage_text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_air_text"
        android:text="@string/air"
        android:layout_below="@id/car_oil_text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_wheel_text"
        android:text="@string/wheel"
        android:layout_below="@id/car_air_text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_brake_text"
        android:text="@string/brake"
        android:layout_below="@id/car_wheel_text"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_tran_text"
        android:text="@string/trans"
        android:layout_below="@id/car_brake_text"
        />

    <TextView android:text="@string/car_make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_make"
        android:layout_toRightOf="@id/car_make_text"
        android:layout_toEndOf="@id/car_make_text"/>

    <TextView android:text="@string/car_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_model"
        android:layout_below="@id/car_make_text"
        android:layout_toRightOf="@id/car_model_text"/>

    <TextView android:text="@string/car_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_year"
        android:layout_below="@id/car_model_text"
        android:layout_toRightOf="@id/car_year_text"/>

    <TextView android:text="@string/car_mileage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_mileage"
        android:layout_below="@id/car_year_text"
        android:layout_toRightOf="@id/car_mileage_text"/>

    <TextView android:text="@string/last_oil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/last_oil"
        android:layout_below="@id/car_mileage_text"
        android:layout_toRightOf="@id/car_oil_text"/>

    <TextView android:text="@string/last_air"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/last_air"
        android:layout_below="@id/car_oil_text"
        android:layout_toRightOf="@id/car_air_text"/>

    <TextView android:text="@string/last_wheel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/last_wheel"
        android:layout_below="@id/car_air_text"
        android:layout_toRightOf="@id/car_wheel_text"/>

    <TextView android:text="@string/last_brake"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/last_brake"
        android:layout_below="@id/car_wheel_text"
        android:layout_toRightOf="@id/car_brake_text"/>

    <TextView android:text="@string/last_tran"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/last_tran"
        android:layout_below="@id/car_brake_text"
        android:layout_toRightOf="@id/car_tran_text"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/go_home"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/go_home"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/go_edit"
        android:layout_centerHorizontal="true"
        android:text="@string/edit"
        android:layout_below="@id/go_home"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_oil_change"
        android:text="@string/next_oil_change"
        android:layout_below="@id/go_edit"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_air_filter"
        android:text="@string/next_air_filter"
        android:layout_below="@id/next_oil_change"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_wheel"
        android:text="@string/next_wheel"
        android:layout_below="@id/next_air_filter"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_brakes"
        android:text="@string/next_brakes"
        android:layout_below="@id/next_wheel"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/next_trans"
        android:text="@string/next_trans"
        android:layout_below="@id/next_brakes"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/oilC"
        android:layout_toRightOf="@id/next_oil_change"
        android:layout_below="@id/go_edit"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/airC"
        android:layout_toRightOf="@id/next_air_filter"
        android:layout_below="@id/oilC"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wheelC"
        android:layout_toRightOf="@id/next_wheel"
        android:layout_below="@id/airC"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/brakeC"
        android:layout_toRightOf="@id/next_brakes"
        android:layout_below="@id/wheelC"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tranC"
        android:layout_toRightOf="@id/next_trans"
        android:layout_below="@id/brakeC"/>



</RelativeLayout>
