<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cardoc.asc1.cardoc.EditCar">


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/NewCar"
        android:text="@string/car_make"
        android:id="@+id/car_make"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/car_make"
        android:text="@string/car_model"
        android:id="@+id/car_model"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/car_model"
        android:text="@string/car_year"
        android:id="@+id/car_year"
        android:inputType="number"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/car_year"
        android:text="@string/car_mileage"
        android:id="@+id/car_mileage"
        android:inputType="number"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/car_mileage"
        android:text="@string/last_oil"
        android:id="@+id/last_oil"
        android:inputType="number"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_oil"
        android:text="@string/last_air"
        android:id="@+id/last_air"
        android:inputType="number"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_air"
        android:text="@string/last_wheel"
        android:id="@+id/last_wheel"
        android:inputType="number"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_wheel"
        android:text="@string/last_brake"
        android:id="@+id/last_brake"
        android:inputType="number"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_brake"
        android:text="@string/last_tran"
        android:id="@+id/last_tran"
        android:inputType="number"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/last_tran"
        android:layout_centerHorizontal="true"
        android:text="@string/change_car"
        android:id="@+id/addNewCar"
        android:inputType="number"/>

</RelativeLayout>
