<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".StartScreen">


    <Button
        android:id="@+id/addCar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_car"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>

    <ImageView
        android:id="@+id/red_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:src="@drawable/redcar"
        />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_below="@id/addCar"
        android:id="@+id/ExistingCars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Exisiting Cars"
        android:layout_centerHorizontal="true"/>

   <TextView android:text="@string/car_make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_make"
        android:layout_below="@id/ExistingCars"/>

    <TextView android:text="@string/car_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_model"
        android:layout_below="@id/car_make"/>

    <TextView android:text="@string/car_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/car_year"
        android:layout_below="@id/car_model"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/get_info"
        android:text="@string/get_car_info"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/ExistingCars"/>

</RelativeLayout>
